--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: "Inter";
+  src: url("/fonts/Inter_var.ttf") format("truetype-variations");
+  font-weight: 100 1000;
+  font-stretch: 25% 151%;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-weight: 900;
+  src: url("/fonts/Poppins-BlackItalic.ttf") format("truetype");
+}
+
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
