--- a/lib/gits_web/components/layouts/root.html.heex
+++ b/lib/gits_web/components/layouts/root.html.heex
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="[scrollbar-gutter:stable] bg-gray-100">
+<html lang="en" class="bg-gray-100">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,7 +12,7 @@
     </script>
     <Turnstile.script />
   </head>
-  <body class="antialiased font-inter">
+  <body class="antialiased font-inter bg-white">
     <%= @inner_content %>
   </body>
 </html>
