--- a/lib/gits_web/controllers/page_html/settings.html.heex
+++ b/lib/gits_web/controllers/page_html/settings.html.heex
@@ -1,2 +1,14 @@
 <h1 class="font-poppins font-semibold text-3xl text-gray-900">User Settings</h1>
 
+<div class="border rounded-2xl p-4 flex flex-wrap gap-2">
+  <div class="grow">
+    <h2 class="font-poppins font-semibold text-xl text-gray-900">Account Settings</h2>
+  </div>
+  <.button class="flex gap-2 items-center">
+    Account Settings <.icon name="hero-arrow-right-mini" />
+  </.button>
+</div>
+
+<div class="border rounded-2xl p-4">
+  <h2 class="font-poppins font-semibold text-xl text-gray-900">About you</h2>
+</div>
