--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -74,6 +74,14 @@
             href="#"
             class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
           >
+            Dashboard
+          </a>
+        </li>
+        <li>
+          <a
+            href="#"
+            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+          >
             Create an event
           </a>
         </li>
@@ -89,7 +97,7 @@
     </div>
   </div>
 </header>
-<main class="p-4 max-w-screen-xl mx-auto md:p-8">
+<main class="p-4 max-w-screen-xl mx-auto md:p-8 space-y-4 md:space-y-8">
   <.flash_group flash={@flash} />
   <%= @inner_content %>
 </main>
