--- a/lib/gits_web/components/layouts/auth.html.heex
+++ b/lib/gits_web/components/layouts/auth.html.heex
@@ -1,9 +1,7 @@
-<div class="p-4 pt-32 md:pt-48 min-h-screen items-center lg:flex lg:p-12 gap-4">
+<div class="p-4 pt-32 md:pt-48 min-h-screen lg:flex lg:px-12 gap-4">
   <main class="sm:max-w-md mx-auto w-full space-y-8">
     <a href="/" class="font-poppins text-3xl font-black italic">GiTS</a>
-    <div>
-      <%= @inner_content %>
-    </div>
+    <%= @inner_content %>
   </main>
   <aside class="hidden lg:block p-4 grow"></aside>
 </div>
