--- a/lib/gits_web/components/layouts/auth.html.heex
+++ b/lib/gits_web/components/layouts/auth.html.heex
@@ -1,4 +1,4 @@
-<div class="p-4 pt-32 md:pt-48 min-h-screen lg:flex lg:px-12 gap-4">
+<div class="p-4 pt-32 min-h-screen lg:flex lg:px-12 gap-4">
   <main class="sm:max-w-md mx-auto w-full space-y-8">
     <a href="/" class="font-poppins text-3xl font-black italic">GiTS</a>
     <%= @inner_content %>
