--- a/lib/gits_web/components/layouts/root.html.heex
+++ b/lib/gits_web/components/layouts/root.html.heex
@@ -12,7 +12,7 @@
     </script>
     <Turnstile.script />
   </head>
-  <body class="antialiased font-inter bg-white">
+  <body class="antialiased font-poppins bg-white">
     <%= @inner_content %>
   </body>
 </html>
