--- a/lib/gits_web/controllers/account_html/show.html.heex
+++ b/lib/gits_web/controllers/account_html/show.html.heex
@@ -1,1 +1,13 @@
-<div class="show">show</div>
+<h1 class="font-poppins font-semibold text-3xl text-gray-900">Account Settings</h1>
+
+<div class="border rounded-2xl p-4 flex flex-wrap gap-2">
+  <h2 class="font-poppins text-2xl"><%= @current_user.display_name %></h2>
+</div>
+<div :if={false} class="border rounded-2xl p-4 flex flex-wrap gap-2">
+  <div class="grow">
+    <h2 class="font-poppins font-semibold text-xl text-gray-900">Account Settings</h2>
+  </div>
+  <.button class="flex gap-2 items-center" phx-click={JS.navigate(~p"/accounts?to=settings")}>
+    Account Settings <.icon name="hero-arrow-right-mini" />
+  </.button>
+</div>
