--- a/lib/gits_web/controllers/account_html/show.html.heex
+++ b/lib/gits_web/controllers/account_html/show.html.heex
@@ -1,13 +1,30 @@
-<h1 class="font-poppins font-semibold text-3xl text-gray-900">Account Settings</h1>
+<h1 class="font-poppins font-semibold text-3xl text-gray-900">Dashboard</h1>
 
-<div class="border rounded-2xl p-4 flex flex-wrap gap-2">
-  <h2 class="font-poppins text-2xl"><%= @current_user.display_name %></h2>
-</div>
-<div :if={false} class="border rounded-2xl p-4 flex flex-wrap gap-2">
-  <div class="grow">
-    <h2 class="font-poppins font-semibold text-xl text-gray-900">Account Settings</h2>
+<div class="grid gap-4">
+  <div class="flex justify-between">
+    <h2 class="font-poppins text-2xl">Events</h2>
+    <.button phx-click={JS.navigate(~p"/accounts/#{@conn.params["account_id"]}/events/new")}>
+      Create new
+    </.button>
   </div>
-  <.button class="flex gap-2 items-center" phx-click={JS.navigate(~p"/accounts?to=settings")}>
-    Account Settings <.icon name="hero-arrow-right-mini" />
-  </.button>
+  <div class="border rounded-2xl overflow-hidden">
+    <div class="px-6 py-2 pt-4 overflow-x-auto">
+      <.table
+        id="events"
+        rows={@events}
+        row_click={
+          fn row -> JS.navigate(~p"/accounts/#{@conn.params["account_id"]}/events/#{row.id}") end
+        }
+      >
+        <:col :let={event} label="Name"><%= event.name %></:col>
+        <:col :let={event} label="Privacy"><%= event.privacy %></:col>
+        <:col :let={event} label="Price"><%= event.price %></:col>
+        <:action>
+          <!-- <button> -->
+          <!--   <.icon name="hero-ellipsis-vertical-mini" /> -->
+          <!-- </button> -->
+        </:action>
+      </.table>
+    </div>
+  </div>
 </div>
