--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -48,22 +48,6 @@
             Settings
           </a>
         </li>
-        <li>
-          <a
-            href="#"
-            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-          >
-            Payments
-          </a>
-        </li>
-        <li>
-          <a
-            href="#"
-            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-          >
-            Tickets
-          </a>
-        </li>
       </ul>
       <ul
         class="py-2 text-sm text-gray-700 dark:text-gray-200"
@@ -71,7 +55,7 @@
       >
         <li>
           <a
-            href="#"
+            href="/accounts"
             class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
           >
             Dashboard
@@ -79,7 +63,7 @@
         </li>
         <li>
           <a
-            href="#"
+            href={"/accounts?" <> URI.encode_query(%{"to" => "events/new"})}
             class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
           >
             Create an event
