--- a/lib/gits_web/components/layouts/event.html.heex
+++ b/lib/gits_web/components/layouts/event.html.heex
@@ -28,19 +28,22 @@
         <span>Back to Dashboard</span>
       </button>
     </div>
+
     <.sidebar_list>
       <span class="text-sm px-4 text-gray-600">Event</span>
-      <.sidebar_list_item
-        label="Dashboard"
-        icon="hero-rectangle-group-mini"
-        to={~p"/accounts/#{@conn.params["account_id"]}"}
-      />
+      <%= if @conn.params["event_id"] || @conn.params["id"] do %>
+        <.sidebar_list_item
+          label="Dashboard"
+          icon="hero-rectangle-group-mini"
+          to={~p"/accounts/#{@account_id}"}
+        />
 
-      <.sidebar_list_item
-        label="Account Settings"
-        icon="hero-cog-6-tooth-mini"
-        to={~p"/accounts/#{@conn.params["account_id"]}/settings"}
-      />
+        <.sidebar_list_item
+          label="Tickets"
+          icon="hero-ticket-mini"
+          to={~p"/accounts/#{@account_id}/events/#{@event_id}/tickets"}
+        />
+      <% end %>
     </.sidebar_list>
     <.profile_group />
   </div>
