--- a/lib/gits_web/controllers/event_html/show.html.heex
+++ b/lib/gits_web/controllers/event_html/show.html.heex
@@ -1,1 +1,13 @@
-<div>event here</div>
+<h1 class="font-poppins font-semibold text-3xl text-gray-900">Dashboard</h1>
+
+<div class="grid gap-4">
+  <div class="flex justify-between">
+    <h2 class="font-poppins text-2xl">Events</h2>
+    <.button phx-click={JS.navigate(~p"/accounts/#{@conn.params["account_id"]}/events/new")}>
+      Create new
+    </.button>
+  </div>
+  <div class="border rounded-2xl overflow-hidden">
+    <div class="px-6 py-2 pt-4 overflow-x-auto"></div>
+  </div>
+</div>
