--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -13,7 +13,7 @@
     >
       <span class="sr-only">Open user menu</span>
       <%= if @current_user do %>
-        <img class="w-8 h-8 rounded-full" src="https://placekitten.com/200/200" alt="user photo" />
+        <img class="w-8 h-8 rounded-full" src="/images/placeholder.png" alt="user photo" />
       <% else %>
         <.icon name="hero-user" class="p-0.5 m-1 text-gray-600" />
       <% end %>
