--- a/lib/gits_web/controllers/event_html/new.html.heex
+++ b/lib/gits_web/controllers/event_html/new.html.heex
@@ -1,5 +1,6 @@
 <h1 class="font-poppins font-semibold text-3xl text-gray-900">Create new event</h1>
-<.simple_form :let={f} for={@form} action={~p"/accounts/36/events"} method="POST">
+
+<.simple_form :let={f} for={@form} action={~p"/accounts/#{@account_id}/events"} method="POST">
   <.input type="text" label="Name" field={f[:name]} />
 
   <div class="flex gap-6 items-center">
