--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -1,2 +1,27 @@
+<div class="gap-4 flex max-w-screen-2xl overflow-x-auto mx-auto lg:overflow-visible lg:flex-wrap lg:gap-9 xl:gap-14">
+  <.link
+    :for={event <- @events}
+    navigate={~p"/events/#{event.id}"}
+    class="rounded-2xl overflow-hidden w-64 aspect-[4/5] relative shrink-0"
+    id={"#{event.id}"}
+  >
+    <img
+      src="/images/placeholder.png"
+      class="w-full h-full object-cover hover:scale-110 transition-transform duration-300"
+    />
+    <div class="absolute top-3 right-3 bg-white grid leading-4 py-2 px-3 rounded-lg">
+      <span class="font-bold text-gray-800 tabular-nums">29</span>
+      <span class="text-xs text-gray-600">Mar</span>
+    </div>
 
-
+    <div class="absolute bottom-3 inset-x-3 bg-white rounded-lg p-2 space-y-2">
+      <h3 class="line-clamp-2 text-sm font-semibold"><%= event.name %></h3>
+      <div class="flex justify-between items-center">
+        <span class="text-gray-600 text-sm">Mea Culpa</span>
+        <span class="bg-blue-100 text-blue-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300">
+          R 300
+        </span>
+      </div>
+    </div>
+  </.link>
+</div>
