--- a/lib/gits_web/controllers/ticket_html/edit.html.heex
+++ b/lib/gits_web/controllers/ticket_html/edit.html.heex
@@ -1,16 +1,16 @@
-<h1 class="font-poppins font-semibold text-3xl text-gray-900">Create ticket</h1>
+<h1 class="font-poppins font-semibold text-3xl text-gray-900">Edit ticket</h1>
 
 <.simple_form
   :let={f}
   for={@form}
-  action={~p"/accounts/#{@account_id}/events/#{@event_id}/tickets"}
-  method="POST"
+  action={~p"/accounts/#{@account_id}/events/#{@event_id}/tickets/#{@ticket_id}"}
+  method="PUT"
 >
   <input type="hidden" name={f[:event_id].name} value={@event_id} />
   <.input type="text" label="Name" field={f[:name]} />
   <.input type="number" label="Price" field={f[:price]} />
 
   <div class="flex gap-6 items-center">
-    <.button>Create</.button>
+    <.button>Edit</.button>
   </div>
 </.simple_form>
