--- a/lib/gits_web/controllers/ticket_html/index.html.heex
+++ b/lib/gits_web/controllers/ticket_html/index.html.heex
@@ -3,7 +3,7 @@
 <div class="grid gap-4">
   <div class="flex justify-between">
     <h2 class="font-poppins text-2xl">Events</h2>
-    <.button phx-click={JS.navigate(~p"/accounts/#{@conn.params["account_id"]}/events/new")}>
+    <.button phx-click={JS.navigate(~p"/accounts/#{@account_id}/events/#{@event_id}/tickets/new")}>
       Create new
     </.button>
   </div>
@@ -13,7 +13,9 @@
         id="tickets"
         rows={@tickets}
         row_click={
-          fn row -> JS.navigate(~p"/accounts/#{@conn.params["account_id"]}/events/#{row.id}") end
+          fn row ->
+            JS.navigate(~p"/accounts/#{@account_id}/events/#{@event_id}/tickets/#{row.id}")
+          end
         }
       >
         <:col :let={event} label="Name"><%= event.name %></:col>
