--- a/lib/gits_web/live/get_tickets_live.html.heex
+++ b/lib/gits_web/live/get_tickets_live.html.heex
@@ -2,14 +2,27 @@
   <GitsWeb.EventComponents.card event={@event}></GitsWeb.EventComponents.card>
   <div class="grid gap-4 md:grid-cols-2 lg:grid-cols-3 lg:gap-8">
     <h2 class="font-medium text-lg col-span-full">Get tickets</h2>
-    <div :for={tick <- 1..3} id={"#{tick}"} class="border rounded-xl p-4 flex items-center">
-      <span class="grow font-medium">General</span>
+    <div
+      :for={ticket <- @tickets}
+      id={"#{ticket.id}"}
+      class="border rounded-xl p-4 flex gap-4 items-center"
+    >
+      <span class="grow font-medium"><%= ticket.name %></span>
+      <span class="text-gray-500">R <%= ticket.price %></span>
       <div class="flex items-center bg-gray-200 rounded-md">
-        <button class="p-2 flex bg-gray-200 rounded-md">
+        <button
+          class="p-2 flex bg-gray-200 rounded-md"
+          phx-click={JS.push("remove_ticket", value: %{id: ticket.id})}
+        >
           <.icon name="hero-minus-mini" />
         </button>
-        <span class="w-8 text-center tabular-nums bg-gray-200">0</span>
-        <button class="p-2 flex bg-gray-200 rounded-md">
+        <span class="w-8 text-center tabular-nums bg-gray-200">
+          <%= ticket.aggregates.quantity %>
+        </span>
+        <button
+          class="p-2 flex bg-gray-200 rounded-md"
+          phx-click={JS.push("add_ticket", value: %{id: ticket.id})}
+        >
           <.icon name="hero-plus-mini" />
         </button>
       </div>
