non nullable date

--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -42,6 +42,15 @@
       >
         <li>
           <a
+            href={~p"/tickets"}
+            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+          >
+            Tickets
+          </a>
+        </li>
+
+        <li>
+          <a
             href={~p"/settings"}
             class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
           >
