--- a/lib/gits_web/components/layouts/event.html.heex
+++ b/lib/gits_web/components/layouts/event.html.heex
@@ -46,6 +46,13 @@
           request_path={@conn.request_path}
           to={~p"/accounts/#{@account_id}/events/#{@event_id}/tickets"}
         />
+
+        <.sidebar_list_item
+          label="Settings"
+          icon="hero-cog-6-tooth-mini"
+          request_path={@conn.request_path}
+          to={~p"/accounts/#{@account_id}/events/#{@event_id}/settings"}
+        />
       <% end %>
     </.sidebar_list>
     <.profile_group />
