--- a/lib/gits_web/controllers/page_html/tickets.html.heex
+++ b/lib/gits_web/controllers/page_html/tickets.html.heex
@@ -1,100 +1,68 @@
-<div class="max-w-screen-2xl mx-auto md:p-4 space-y-4 md:space-y-8">
-  <div class="bg-white flex items-center justify-between p-4 max-w-md md:rounded-2xl">
-    <button phx-click={JS.navigate(~p"/")} class="p-2 rounded-xl">
-      <.icon name="hero-arrow-left" />
-    </button>
-    <h1 class="font-bold text-lg">Tickets</h1>
-    <button class="p-2 rounded-xl opacity-0" disabled>
-      <.icon name="hero-ellipsis-vertical" />
-    </button>
-  </div>
-  <div class="grid grid-cols-2 px-4 gap-4 md:p-0 max-w-md">
-    <span class="text-sm font-medium p-4 py-3 rounded-xl text-center bg-blue-600 text-white">
-      Upcoming
-    </span>
-
-    <span class="bg-white text-gray-500 text-sm p-4 py-3 rounded-xl text-center">
-      Past tickets
-    </span>
-  </div>
-  <swiper-container
-    class="max-w-md py-12 mx-0"
-    events-prefix="swiper"
-    effect="coverflow"
-    grab-cursor="true"
-    centered-slides="true"
-    slides-per-view="auto"
-    coverflow-effect-rotate="50"
-    coverflow-effect-stretch="0"
-    coverflow-effect-depth="100"
-    coverflow-effect-modifier="1"
-    coverflow-effect-slide-shadows="true"
-  >
-    <swiper-slide :for={id <- 1..5} class="bg-white rounded-2xl overflow-hidden max-w-xs">
-      <div class="p-4 grid grid-cols-2 gap-4 ">
-        <div class="col-span-full flex items-center">
-          <span class="col-span-full font-bold text-gray-500 grow text-xs">#<%= id %></span>
-          <button
-            class="inline-flex p-2 rounded-lg"
-            phx-click={GitsWeb.CoreComponents.show_modal("expand-ticket")}
-          >
-            <.icon name="hero-arrows-pointing-out-mini" />
-          </button>
-        </div>
-        <h2 class="col-span-full font-bold text-lg">General</h2>
-        <h2 class="col-span-full font-bold">Rock concert - Image Dragons</h2>
-        <div class="grid text-sm">
-          <span class="text-gray-500">Date</span><span class="font-medium">29 March 2023</span>
-        </div>
-
-        <div class="grid text-sm">
-          <span class="text-gray-500">Time</span><span class="font-medium">10:30 PM</span>
-        </div>
-        <div class="grid text-sm">
-          <span class="text-gray-500">Location</span><span class="font-medium">Artistry JHB</span>
-        </div>
-      </div>
-      <div class="px-6 relative">
-        <hr class="border-dashed" />
-      </div>
-      <div class="grid justify-center blur-md">
-        <%= raw(
-          "Ticket #{id}"
-          |> EQRCode.encode()
-          |> EQRCode.svg(shape: "circle", color: "#475569", width: 320)
-        ) %>
-      </div>
-    </swiper-slide>
-  </swiper-container>
-  <.modal id="expand-ticket">
-    <div class="grid md:grid-cols-2 md:gap-8">
-      <div class="grid">
-        <div class="grid grid-cols-2 gap-4 p-4">
-          <h2 class="col-span-full font-bold text-gray-500 text-xs">#1</h2>
-          <h2 class="col-span-full font-bold text-lg">General</h2>
-          <h2 class="col-span-full font-bold">Rock concert - Image Dragons</h2>
+<%= if @ticket_instances == [] do %>
+  <div>Buy one or two tickets, they'll show up here</div>
+<% else %>
+  <div class=""></div>
+  <div class="flex gap-8">
+    <swiper-container
+      class="w-full max-w-sm mx-0 py-6 bg-gray-100 rounded-2xl"
+      events-prefix="swiper"
+      effect="coverflow"
+      grab-cursor="true"
+      centered-slides="true"
+      slides-per-view="auto"
+      coverflow-effect-rotate="50"
+      coverflow-effect-stretch="0"
+      coverflow-effect-depth="100"
+      coverflow-effect-modifier="1"
+      coverflow-effect-slide-shadows="true"
+    >
+      <swiper-slide
+        :for={instance <- @ticket_instances}
+        class="bg-white rounded-2xl overflow-hidden max-w-64"
+      >
+        <div class="p-4 grid grid-cols-[2fr_1fr] gap-4 ">
+          <div class="col-span-full flex items-center">
+            <span class="col-span-full font-bold text-gray-500 grow text-xs">
+              #<%= instance.id %>
+            </span>
+            <button
+              class="inline-flex p-2 rounded-lg"
+              phx-click={GitsWeb.CoreComponents.show_modal("expand-ticket")}
+            >
+              <.icon name="hero-ellipsis-horizontal-mini" />
+            </button>
+          </div>
+          <h2 class="col-span-full font-bold line-clamp-2"><%= "foo" %></h2>
           <div class="grid text-sm">
             <span class="text-gray-500">Date</span><span class="font-medium">29 March 2023</span>
           </div>
+
           <div class="grid text-sm">
             <span class="text-gray-500">Time</span><span class="font-medium">10:30 PM</span>
           </div>
           <div class="grid text-sm">
-            <span class="text-gray-500">Location</span><span class="font-medium">Artistry JHB</span>
+            <span class="text-gray-500">Location</span><span class="font-medium truncate">Artistry JHB, Fredman Drive, Sandown, Sandton, South Africa</span>
+          </div>
+          <div class="grid text-sm">
+            <span class="text-gray-500">Admit</span><span class="font-medium truncate max-w-24">1&times; <%= "bar" %></span>
           </div>
         </div>
         <div class="px-6 relative">
           <hr class="border-dashed" />
         </div>
-        <div class="grid justify-center overflow-hidden w-full">
+        <div class="grid justify-center blur-mdx">
           <%= raw(
-            "Ticket #1"
+            "Ticket #{instance.id}"
             |> EQRCode.encode()
-            |> EQRCode.svg(shape: "circle", color: "#475569", width: 320)
+            |> EQRCode.svg(shape: "circle", color: "#475569", width: 256)
           ) %>
         </div>
-      </div>
-      <div class="border rounded-xl p-4"></div>
+      </swiper-slide>
+    </swiper-container>
+    <div class="hidden md:block">
+      best viewed on mobile
     </div>
-  </.modal>
-</div>
+  </div>
+
+  <.modal id="foo" show={}></.modal>
+<% end %>
