--- a/lib/gits_web/components/layouts/event.html.heex
+++ b/lib/gits_web/components/layouts/event.html.heex
@@ -48,7 +48,7 @@
         />
 
         <.sidebar_list_item
-          label="Settings"
+          label="Event Settings"
           icon="hero-cog-6-tooth-mini"
           request_path={@conn.request_path}
           to={~p"/accounts/#{@account_id}/events/#{@event_id}/settings"}
