--- a/lib/gits_web/components/layouts/event.html.heex
+++ b/lib/gits_web/components/layouts/event.html.heex
@@ -60,6 +60,7 @@
 
   <div class="grow p-4 lg:p-8">
     <div class="mx-auto max-w-6xl space-y-8">
+      <.flash_group flash={@flash} />
       <%= @inner_content %>
     </div>
   </div>
