--- a/lib/gits_web/components/layouts/account.html.heex
+++ b/lib/gits_web/components/layouts/account.html.heex
@@ -29,6 +29,14 @@
       />
 
       <.sidebar_list_item
+        label="Dashboard"
+        icon="hero-rectangle-group-mini"
+        request_path={@conn.request_path}
+        root={true}
+        to={~p"/accounts/#{@conn.params["account_id"]}"}
+      />
+
+      <.sidebar_list_item
         label="Account Settings"
         icon="hero-cog-6-tooth-mini"
         request_path={@conn.request_path}
