--- a/lib/gits_web/components/layouts/account.html.heex
+++ b/lib/gits_web/components/layouts/account.html.heex
@@ -29,18 +29,18 @@
       />
 
       <.sidebar_list_item
-        label="Dashboard"
-        icon="hero-rectangle-group-mini"
-        request_path={@conn.request_path}
-        root={true}
-        to={~p"/accounts/#{@conn.params["account_id"]}"}
-      />
-
-      <.sidebar_list_item
         label="Account Settings"
         icon="hero-cog-6-tooth-mini"
         request_path={@conn.request_path}
         to={~p"/accounts/#{@conn.params["account_id"]}/settings"}
+      />
+
+      <.sidebar_list_item
+        label="Team"
+        icon="hero-users-mini"
+        request_path={@conn.request_path}
+        root={true}
+        to={~p"/accounts/#{@conn.params["account_id"]}/team"}
       />
     </.sidebar_list>
     <.profile_group />
