--- a/lib/gits_web/live/auth_live/form.html.heex
+++ b/lib/gits_web/live/auth_live/form.html.heex
@@ -19,14 +19,20 @@
   <div class="flex gap-6 items-center">
     <.button>Sign in</.button>
     <%= if @is_register? do %>
-      <.link navigate={~p"/sign-in"}>Already have an account?</.link>
+      <.link :if={@email} navigate={~p"/sign-in" <> "?email=#{@email}"}>
+        Already have an account?
+      </.link>
+      <.link :if={!@email} navigate={~p"/sign-in"}>Already have an account?</.link>
     <% else %>
       <.link navigate={~p"/forgot-password"}>Forgot password?</.link>
     <% end %>
   </div>
 
   <div :if={!@is_register?}>
-    <.link navigate={~p"/register"}>Don't have an account?</.link>
+    <.link :if={@email} navigate={~p"/register" <> "?email=#{@email}"}>
+      Don't have an account?
+    </.link>
+    <.link :if={!@email} navigate={~p"/register"}>Don't have an account?</.link>
   </div>
 
   <Turnstile.widget theme="light" appearance="interaction-only" />
