--- a/lib/gits_web/components/layouts/event.html.heex
+++ b/lib/gits_web/components/layouts/event.html.heex
@@ -30,14 +30,29 @@
     </div>
 
     <.sidebar_list>
-      <span class="text-sm px-4 text-gray-600">Event</span>
       <%= if @conn.params["event_id"] || @conn.params["id"] do %>
         <.sidebar_list_item
-          label="Dashboard"
-          icon="hero-rectangle-group-mini"
+          label="Event Dashboard"
+          icon="hero-squares-2x2-mini"
           request_path={@conn.request_path}
           root={true}
           to={~p"/accounts/#{@account_id}/events/#{@event_id}"}
+        />
+
+        <span class="block text-sm px-4 pt-2 text-gray-600">Track</span>
+        <.sidebar_list_item
+          label="Attendee List"
+          icon="hero-cog-6-tooth-mini"
+          request_path={@conn.request_path}
+          to={~p"/accounts/#{@account_id}/events/#{@event_id}/attendees"}
+        />
+
+        <span class="block text-sm px-4 pt-2 text-gray-600">Setup</span>
+        <.sidebar_list_item
+          label="Event Details"
+          icon="hero-cog-6-tooth-mini"
+          request_path={@conn.request_path}
+          to={~p"/accounts/#{@account_id}/events/#{@event_id}/settings"}
         />
 
         <.sidebar_list_item
@@ -45,13 +60,6 @@
           icon="hero-ticket-mini"
           request_path={@conn.request_path}
           to={~p"/accounts/#{@account_id}/events/#{@event_id}/tickets"}
-        />
-
-        <.sidebar_list_item
-          label="Event Settings"
-          icon="hero-cog-6-tooth-mini"
-          request_path={@conn.request_path}
-          to={~p"/accounts/#{@account_id}/events/#{@event_id}/settings"}
         />
       <% end %>
     </.sidebar_list>
