--- a/lib/gits_web/controllers/attendee_html/index.html.heex
+++ b/lib/gits_web/controllers/attendee_html/index.html.heex
@@ -1,9 +1,11 @@
-<h1 class="font-poppins font-semibold text-3xl text-gray-900">Tickets</h1>
+<h1 class="font-poppins font-semibold text-3xl text-gray-900">Attendee List</h1>
 
 <div class="grid gap-4">
   <div class="flex justify-between">
-    <h2 class="font-poppins text-2xl">Ticket Types</h2>
-    <.button phx-click={JS.navigate(~p"/accounts/#{@account_id}/events/#{@event_id}/tickets/new")}>
+    <h2 class="font-poppins text-2xl"></h2>
+    <.button phx-click={
+      JS.navigate(~p"/accounts/#{@account_id}/events/#{@event_id}/attendees/new")
+    }>
       Create new
     </.button>
   </div>
@@ -11,7 +13,7 @@
     <div class="px-6 py-2 pt-4 overflow-x-auto">
       <.table
         id="tickets"
-        rows={@tickets}
+        rows={[]}
         row_click={
           fn row ->
             JS.navigate(~p"/accounts/#{@account_id}/events/#{@event_id}/tickets/#{row.id}")
