--- a/lib/gits_web/controllers/event_html/settings.html.heex
+++ b/lib/gits_web/controllers/event_html/settings.html.heex
@@ -1,8 +1,8 @@
-<h1 class="font-poppins font-semibold text-3xl text-gray-900">Event Settings</h1>
+<h1 class="font-poppins font-semibold text-3xl text-gray-900">Event Details</h1>
 
 <div class="border rounded-2xl p-4">
   <div class="flex justify-between items-center">
-    <h2 class="font-poppins text-2xl">Event details</h2>
+    <h2 class="font-poppins text-2xl">Event Listing</h2>
     <.link
       href={~p"/accounts/#{@account_id}/events/#{@event_id}/edit"}
       class="flex gap-2 items-center"
