--- a/lib/gits_web/controllers/attendee_html/index.html.heex
+++ b/lib/gits_web/controllers/attendee_html/index.html.heex
@@ -4,7 +4,7 @@
   <div class="flex justify-between">
     <h2 class="font-poppins text-2xl"></h2>
     <.button phx-click={
-      JS.navigate(~p"/accounts/#{@account_id}/events/#{@event_id}/attendees/new")
+      JS.navigate(~p"/accounts/#{@account_id}/events/#{@event_id}/attendees/scanner")
     }>
       Create new
     </.button>
