--- a/lib/gits_web/controllers/attendee_html/index.html.heex
+++ b/lib/gits_web/controllers/attendee_html/index.html.heex
@@ -11,16 +11,13 @@
   </div>
   <div class="border rounded-2xl overflow-hidden">
     <div class="px-6 py-2 pt-4 overflow-x-auto">
-      <.table
-        id="tickets"
-        rows={[]}
-        row_click={
-          fn row ->
-            JS.navigate(~p"/accounts/#{@account_id}/events/#{@event_id}/tickets/#{row.id}")
-          end
-        }
-      >
-        <:col :let={event} label="Name"><%= event.name %></:col>
+      <.table id="attendees" rows={@attendees}>
+        <:col :let={attendee} label="Name"><%= attendee.name %></:col>
+        <:col :let={attendee} label="Admitted at">
+          <%= attendee.created_at
+          |> Timex.to_datetime(:local)
+          |> Timex.format!("%e %b %Y, %R %p", :strftime) %>
+        </:col>
         <:action>
           <!-- <button> -->
           <!--   <.icon name="hero-ellipsis-vertical-mini" /> -->
