--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,36 +1,34 @@
-<header class="p-4 md:px-8 flex items-center">
+<header class="flex items-center gap-4 p-4 md:px-8">
   <div>
-    <a href="/" class="font-poppins italic font-black text-2xl">GiTS</a>
+    <a href="/" class="font-poppins text-2xl font-black italic">GiTS</a>
   </div>
   <div role="none" class="grow"></div>
-  <div>
+  <div phx-click-away={JS.add_class("hidden", to: "#header-dropdown")} class="relative">
     <button
-      id="dropdownUserAvatarButton"
-      data-dropdown-toggle="dropdownAvatar"
-      data-dropdown-offset-skidding="-60"
-      class="flex text-sm bg-gray-200 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+      id="header-dropdown-button"
+      class="flex rounded-full bg-gray-200 text-sm focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600 md:me-0"
       type="button"
+      phx-click={JS.toggle_class("hidden", to: "#header-dropdown")}
     >
-      <span class="sr-only">Open user menu</span>
       <%= if @current_user do %>
-        <img class="w-8 h-8 rounded-full" src="/images/placeholder.png" alt="user photo" />
+        <img class="h-8 w-8 rounded-full" src="/images/placeholder.png" alt="user photo" />
       <% else %>
         <.icon name="hero-user" class="p-0.5 m-1 text-gray-600" />
       <% end %>
     </button>
     <div
-      id="dropdownAvatar"
-      class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600"
+      id="header-dropdown"
+      class="absolute top-full right-2 z-10 hidden w-44 divide-y divide-gray-100 rounded-lg bg-white shadow dark:divide-gray-600 dark:bg-gray-700"
     >
       <%= if @current_user do %>
         <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
           <div><%= @current_user.display_name %></div>
-          <div class="font-medium truncate"><%= @current_user.email %></div>
+          <div class="truncate font-medium"><%= @current_user.email %></div>
         </div>
       <% else %>
         <a
           href={~p"/sign-in"}
-          class="block text-gray-700 dark:text-gray-200 text-sm px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+          class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white"
         >
           Sign In
         </a>
@@ -72,7 +70,7 @@
         </li>
         <li>
           <a
-            href={"/accounts?" <> URI.encode_query(%{"to" => "events/new"})}
+            href={"/search?" <> URI.encode_query(%{"to" => "events/new"})}
             class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
           >
             Create an event
@@ -82,7 +80,7 @@
       <div :if={@current_user} class="py-2">
         <a
           href={~p"/sign-out"}
-          class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
+          class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-600 dark:hover:text-white"
         >
           Sign out
         </a>
@@ -90,7 +88,7 @@
     </div>
   </div>
 </header>
-<main class="p-4 max-w-screen-xl mx-auto md:p-8 space-y-4 md:space-y-8">
+<main class="mx-auto max-w-screen-xl space-y-4 p-4 md:space-y-8 md:p-8">
   <.flash_group flash={@flash} />
   <%= @inner_content %>
 </main>
