--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -92,3 +92,21 @@
   <.flash_group flash={@flash} />
   <%= @inner_content %>
 </main>
+
+<footer class="bg-white">
+  <div class="mx-auto max-w-7xl space-y-10 overflow-hidden px-6 py-20 sm:py-24 lg:px-8">
+    <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12" aria-label="Footer">
+      <div class="pb-6">
+        <a href="#" class="text-sm leading-6 text-gray-600 hover:text-gray-900">About</a>
+      </div>
+      <div class="pb-6">
+        <a href="/organizers" class="text-sm leading-6 text-gray-600 hover:text-gray-900">
+          Organizers
+        </a>
+      </div>
+    </nav>
+    <p class="text-center text-xs leading-5 text-gray-500">
+      &copy; 2024
+    </p>
+  </div>
+</footer>
