--- a/lib/gits_web/components/layouts/auth.html.heex
+++ b/lib/gits_web/components/layouts/auth.html.heex
@@ -1,7 +1,7 @@
-<div class="p-4 pt-32 min-h-screen lg:flex lg:px-12 gap-4">
-  <main class="sm:max-w-md mx-auto w-full space-y-8">
+<div class="min-h-screen gap-4 p-4 pt-32 lg:flex lg:px-12">
+  <main class="mx-auto w-full space-y-8 sm:max-w-md">
     <a href="/" class="font-poppins text-3xl font-black italic">GiTS</a>
     <%= @inner_content %>
   </main>
-  <aside class="hidden lg:block p-4 grow"></aside>
+  <aside class="hidden grow p-4 lg:block"></aside>
 </div>
