--- a/lib/gits_web/controllers/account_html/show.html.heex
+++ b/lib/gits_web/controllers/account_html/show.html.heex
@@ -1,28 +1,34 @@
-<h1 class="font-poppins font-semibold text-3xl text-gray-900">Dashboard</h1>
+<.dashboard_sidebar base={~p"/accounts/#{@conn.params["id"]}"} request_path={@conn.request_path} />
+<.main>
+  <.main_header title="Dashboard"></.main_header>
+  <div class="grid w-full items-start gap-4 px-4 align-top md:grid-cols-2">
+    <div class="flex gap-2 rounded-xl border p-6 shadow">
+      <.icon name="hero-exclamation-triangle" class="text-amber-500 shrink-0" />
+      <div class="grid gap-2">
+        <span class="font-medium">
+          Verify your email address
+        </span>
 
-<div class="grid gap-4">
-  <div class="flex justify-between">
-    <h2 class="font-poppins text-2xl">Events</h2>
-    <.button phx-click={JS.navigate(~p"/accounts/#{@conn.params["account_id"]}/events/new")}>
-      Create new
-    </.button>
-  </div>
-  <div class="border rounded-2xl overflow-hidden">
-    <div class="px-6 py-2 pt-4 overflow-x-auto">
-      <.table
-        id="events"
-        rows={@events}
-        row_click={
-          fn row -> JS.navigate(~p"/accounts/#{@conn.params["account_id"]}/events/#{row.id}") end
-        }
-      >
-        <:col :let={event} label="Name"><%= event.name %></:col>
-        <:action>
-          <!-- <button> -->
-          <!--   <.icon name="hero-ellipsis-vertical-mini" /> -->
-          <!-- </button> -->
-        </:action>
-      </.table>
+        <span class="text-gray-700"></span>
+        <.link>Go to profile</.link>
+      </div>
+    </div>
+    <div class="flex gap-2 rounded-xl border p-6 shadow">
+      <.icon name="hero-information-circle" class="text-green-500 shrink-0" />
+      <div class="grid gap-2">
+        <span class="font-medium">
+          Finish setting up account
+        </span>
+
+        <span class="text-gray-700"></span>
+        <.link>Go to account settings</.link>
+      </div>
+    </div>
+    <div class="grid gap-2 rounded-xl border p-6 shadow">
+      <h3 class="text-lg font-semibold">Checklist</h3>
+      <span class="text-gray-500 line-through">1. Create my first event</span>
+      <span class="text-gray-900 ">2. Upload graphics for the event</span>
+      <span class="text-gray-900">3. Add ticket to the event</span>
     </div>
   </div>
-</div>
+</.main>
