--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -40,6 +40,20 @@
   src: url("/fonts/Poppins-Regular.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 300;
+  src: url("/fonts/Poppins-Light.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-weight: 300;
+  src: url("/fonts/Poppins-LightItalic.ttf") format("truetype");
+}
+
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
