--- a/lib/gits_web/controllers/event_html/show.html.heex
+++ b/lib/gits_web/controllers/event_html/show.html.heex
@@ -1,10 +1,17 @@
-<h1 class="font-poppins font-semibold text-3xl text-gray-900">Dashboard</h1>
+<.event_sidebar
+  back={~p"/accounts/#{@conn.params["account_id"]}/events"}
+  base={~p"/accounts/#{@conn.params["account_id"]}/events/#{@conn.params["id"]}"}
+  request_path={@conn.request_path}
+/>
+<.main>
+  <.main_header title="Event Overview"></.main_header>
 
-<div class="grid gap-4">
-  <div class="flex justify-between">
-    <h2 class="font-poppins text-2xl"><%= @event.name %></h2>
+  <div class="grid gap-4 px-4">
+    <div class="flex justify-between">
+      <h2 class="font-poppins text-2xl"><%= @event.name %></h2>
+    </div>
+    <div class="overflow-hidden rounded-2xl border">
+      <div class="overflow-x-auto px-6 py-2 pt-4"></div>
+    </div>
   </div>
-  <div class="border rounded-2xl overflow-hidden">
-    <div class="px-6 py-2 pt-4 overflow-x-auto"></div>
-  </div>
-</div>
+</.main>
