--- a/lib/gits_web/controllers/page_html/organizers.html.heex
+++ b/lib/gits_web/controllers/page_html/organizers.html.heex
@@ -1,3 +1,3 @@
 <div class="mx-auto flex max-w-screen-2xl gap-4 overflow-x-auto lg:flex-wrap lg:gap-9 lg:overflow-visible xl:gap-14">
-  organizers
+  <.link href={~p"/accounts/new"}>Create your first event</.link>
 </div>
