--- a/lib/gits_web/controllers/ticket_html/index.html.heex
+++ b/lib/gits_web/controllers/ticket_html/index.html.heex
@@ -1,4 +1,4 @@
-<h1 class="font-poppins font-semibold text-3xl text-gray-900">Tickets</h1>
+<h1 class="font-poppins text-3xl font-semibold text-gray-900">Tickets</h1>
 
 <div class="grid gap-4">
   <div class="flex justify-between">
@@ -7,8 +7,8 @@
       Create new
     </.button>
   </div>
-  <div class="border rounded-2xl overflow-hidden">
-    <div class="px-6 py-2 pt-4 overflow-x-auto">
+  <div class="overflow-hidden rounded-2xl border">
+    <div class="overflow-x-auto px-6 py-2 pt-4">
       <.table
         id="tickets"
         rows={@tickets}
