--- a/lib/gits_web/live/auth_live/form.html.heex
+++ b/lib/gits_web/live/auth_live/form.html.heex
@@ -7,7 +7,7 @@
   action={@action}
   method="POST"
 >
-  <h1 class="font-poppins font-semibold text-3xl text-gray-900"><%= @title %></h1>
+  <h1 class="font-poppins text-3xl font-semibold text-gray-900"><%= @title %></h1>
   <div :if={@is_register?} class="mb-5">
     <.input type="text" label="Display name" field={f[:display_name]} />
   </div>
@@ -16,8 +16,13 @@
 
   <.input type="password" label="Password" field={f[:password]} />
 
-  <div class="flex gap-6 items-center">
-    <.button>Sign in</.button>
+  <div class="flex justify-between">
+    <div :if={!@is_register?}>
+      <.link :if={@email} navigate={~p"/register" <> "?email=#{@email}"}>
+        Don't have an account?
+      </.link>
+      <.link :if={!@email} navigate={~p"/register"}>Need an account?</.link>
+    </div>
     <%= if @is_register? do %>
       <.link :if={@email} navigate={~p"/sign-in" <> "?email=#{@email}"}>
         Already have an account?
@@ -28,11 +33,8 @@
     <% end %>
   </div>
 
-  <div :if={!@is_register?}>
-    <.link :if={@email} navigate={~p"/register" <> "?email=#{@email}"}>
-      Don't have an account?
-    </.link>
-    <.link :if={!@email} navigate={~p"/register"}>Don't have an account?</.link>
+  <div class="flex items-center gap-6">
+    <.button>Sign in</.button>
   </div>
 
   <Turnstile.widget theme="light" appearance="interaction-only" />
