started scaffolding complete event

--- a/lib/gits_web/components/dashboard/main.html.heex
+++ b/lib/gits_web/components/dashboard/main.html.heex
@@ -1,5 +1,5 @@
 <main class="relative grow">
-  <div class="mx-auto max-w-screen-xl space-y-8">
+  <div class="mx-auto max-w-screen-xl space-y-8 pb-8">
     <%= render_slot(@inner_block) %>
   </div>
 </main>
