--- a/lib/gits_web/controllers/event_html/edit.html.heex
+++ b/lib/gits_web/controllers/event_html/edit.html.heex
@@ -1,14 +1,21 @@
-<h1 class="font-poppins font-semibold text-3xl text-gray-900">Edit event</h1>
+<.dashboard_sidebar
+  base={~p"/accounts/#{@conn.params["account_id"]}"}
+  request_path={@conn.request_path}
+/>
+<.main>
+  <.main_header title="Edit event"></.main_header>
 
-<.simple_form
-  :let={f}
-  for={@form}
-  action={~p"/accounts/#{@account_id}/events/#{@event_id}"}
-  method="PUT"
->
-  <.input type="text" label="Name" field={f[:name]} />
-  <.input type="datetime-local" label="Starts date" field={f[:starts_at]} />
-  <div class="flex gap-6 items-center">
-    <.button>Update</.button>
-  </div>
-</.simple_form>
+  <.simple_form
+    :let={f}
+    for={@form}
+    action={~p"/accounts/#{@conn.params["account_id"]}/events/#{@conn.params["id"]}"}
+    method="PUT"
+  >
+    <.input type="text" label="Name" field={f[:name]} />
+    <.input type="textarea" label="Description" field={f[:description]} />
+    <.input type="datetime-local" label="Starts date" field={f[:starts_at]} />
+    <div class="flex items-center gap-6">
+      <.button>Update</.button>
+    </div>
+  </.simple_form>
+</.main>
