--- a/lib/gits_web/controllers/event_html/settings.html.heex
+++ b/lib/gits_web/controllers/event_html/settings.html.heex
@@ -1,42 +1,45 @@
-<.dashboard_sidebar
-  base={~p"/accounts/#{@conn.params["account_id"]}"}
+<.event_sidebar
+  back={~p"/accounts/#{@conn.params["account_id"]}/events"}
+  base={~p"/accounts/#{@conn.params["account_id"]}/events/#{@conn.params["event_id"]}"}
   request_path={@conn.request_path}
 />
+
 <.main>
-  <.main_header title="Creat new event"></.main_header>
-
-  <h1 class="font-poppins text-3xl font-semibold text-gray-900">Event Details</h1>
-
-  <div class="rounded-2xl border p-4">
-    <div class="flex items-center justify-between">
-      <h2 class="font-poppins text-2xl">Event Listing</h2>
-      <.link
-        href={~p"/accounts/#{@account_id}/events/#{@event_id}/edit"}
-        class="flex gap-2 items-center"
-      >
-        <span>Edit</span>
-        <.icon name="hero-arrow-right-mini" />
-      </.link>
+  <.main_header title="Settings"></.main_header>
+  <div class="px-4">
+    <div class="rounded-2xl border p-4 lg:p-12">
+      <div class="flex items-center justify-between">
+        <h2 class="font-poppins text-xl font-medium">Event Listing</h2>
+        <.link
+          href={
+            ~p"/accounts/#{@conn.params["account_id"]}/events/#{@conn.params["event_id"]}/edit"
+          }
+          class="flex gap-2 items-center"
+        >
+          <span>Edit</span>
+          <.icon name="hero-arrow-right-mini" />
+        </.link>
+      </div>
+      <dl class="divide-y divide-gray-100">
+        <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
+          <dt class="text-sm font-medium text-gray-900">Name</dt>
+          <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">
+            <%= @event.name %>
+          </dd>
+        </div>
+        <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
+          <dt class="text-sm font-medium text-gray-900">Decription</dt>
+          <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">
+            <span class="whitespace-pre-line"><%= @event.description %></span>
+          </dd>
+        </div>
+        <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
+          <dt class="text-sm font-medium text-gray-900">Start date</dt>
+          <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">
+            <%= @event.starts_at |> Timex.format!("%e %b %Y, %R %p", :strftime) %>
+          </dd>
+        </div>
+      </dl>
     </div>
-    <dl class="divide-y divide-gray-100">
-      <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
-        <dt class="text-sm font-medium text-gray-900">Name</dt>
-        <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">
-          <%= @event.name %>
-        </dd>
-      </div>
-      <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
-        <dt class="text-sm font-medium text-gray-900">Decription</dt>
-        <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">
-          <%= @event.description %>
-        </dd>
-      </div>
-      <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
-        <dt class="text-sm font-medium text-gray-900">Start date</dt>
-        <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">
-          <%= @event.starts_at |> Timex.format!("%e %b %Y, %R %p", :strftime) %>
-        </dd>
-      </div>
-    </dl>
   </div>
 </.main>
