cache, address, dotenv

--- a/lib/gits_web/components/dashboard/main.html.heex
+++ b/lib/gits_web/components/dashboard/main.html.heex
@@ -1,4 +1,4 @@
-<main class="relative grow">
+<main class="relative w-full grow">
   <div class="mx-auto max-w-screen-xl space-y-8 pb-8">
     <%= render_slot(@inner_block) %>
   </div>
