--- a/lib/gits_web/components/dashboard/sidebar.html.heex
+++ b/lib/gits_web/components/dashboard/sidebar.html.heex
@@ -1,6 +1,6 @@
 <aside
   id="sidebar"
-  class="absolute -left-72 z-50 flex h-screen w-72 flex-col gap-4 bg-white p-2 px-4 shadow-lg transition-all lg:static lg:translate-x-0 lg:shadow-none"
+  class="absolute -left-72 z-50 flex h-screen w-72 shrink-0 flex-col gap-4 bg-white p-2 px-4 shadow-lg transition-all lg:static lg:translate-x-0 lg:shadow-none"
   phx-click-away={Phoenix.LiveView.JS.remove_class("translate-x-72", to: "#sidebar")}
 >
   <div class="flex items-center justify-between">
