--- a/lib/gits_web/controllers/event_html/edit.html.heex
+++ b/lib/gits_web/controllers/event_html/edit.html.heex
@@ -1,21 +1,24 @@
-<.dashboard_sidebar
-  base={~p"/accounts/#{@conn.params["account_id"]}"}
+<.event_sidebar
+  back={~p"/accounts/#{@conn.params["account_id"]}/events"}
+  base={~p"/accounts/#{@conn.params["account_id"]}/events/#{@conn.params["id"]}"}
   request_path={@conn.request_path}
 />
+
 <.main>
   <.main_header title="Edit event"></.main_header>
-
-  <.simple_form
-    :let={f}
-    for={@form}
-    action={~p"/accounts/#{@conn.params["account_id"]}/events/#{@conn.params["id"]}"}
-    method="PUT"
-  >
-    <.input type="text" label="Name" field={f[:name]} />
-    <.input type="textarea" label="Description" field={f[:description]} />
-    <.input type="datetime-local" label="Starts date" field={f[:starts_at]} />
-    <div class="flex items-center gap-6">
-      <.button>Update</.button>
-    </div>
-  </.simple_form>
+  <div class="px-4">
+    <.simple_form
+      :let={f}
+      for={@form}
+      action={~p"/accounts/#{@conn.params["account_id"]}/events/#{@conn.params["id"]}"}
+      method="PUT"
+    >
+      <.input type="text" label="Name" field={f[:name]} />
+      <.input type="textarea" label="Description" field={f[:description]} />
+      <.input type="datetime-local" label="Starts date" field={f[:starts_at]} />
+      <div class="flex items-center gap-6">
+        <.button>Update</.button>
+      </div>
+    </.simple_form>
+  </div>
 </.main>
