--- a/lib/gits_web/live/upload_listing_live.html.heex
+++ b/lib/gits_web/live/upload_listing_live.html.heex
@@ -6,18 +6,20 @@
 
 <.main>
   <.main_header title="Upload listing image"></.main_header>
-  <form id="upload-form" phx-submit="save" phx-change="validate" class="space-y-4 px-4">
+  <form id="upload-form" phx-submit="save" phx-change="validate" class="space-y-8 px-4">
     <div class="flex max-w-md">
       <.live_file_input
         upload={@uploads.listing}
         class="block w-full text-sm text-slate-500 file:mr-4 file:bg-zinc-100 file:border-0 file:py-2 file:px-4 file:rounded-full file:text-sm file:text-zinc-700 hover:file:bg-zinc-200"
       />
     </div>
-    <button
-      :if={Enum.any?(@uploads.listing.entries)}
-      class="rounded-2xl px-4 py-2 hover:bg-zinc-100"
-    >
-      Upload
-    </button>
+    <div class="flex justify-between">
+      <.link href={~p"/accounts/#{@account_id}/events/#{@event_id}/settings"} class="px-4 py-2">
+        Cancel
+      </.link>
+      <.button :if={Enum.any?(@uploads.listing.entries)}>
+        Upload
+      </.button>
+    </div>
   </form>
 </.main>
